Bug 230477 - Okular crashes when exporting document archive
Summary: Okular crashes when exporting document archive
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.10
Platform: unspecified Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-12 18:26 UTC by eric948470
Modified: 2010-05-10 18:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description eric948470 2010-03-12 18:26:20 UTC
Version:           0.10 (using 4.4.00 (KDE 4.4.0), MS Visual Studio 2008 SP1)
Compiler:          cl.exe
OS:                Microsoft Windows (i686) release 6.0 (Vista Home Edition)

When I try to export a document archive, Okular crashes and windows reports that the application stopped working.
Comment 1 Pino Toscano 2010-03-16 15:50:40 UTC
@KDE-Windows guys:
can you please take a look at this? Thanks!
Comment 2 Christian Ehrlicher 2010-03-20 22:20:59 UTC
SVN commit 1105664 by chehrlic:

as nobody else is there, fix okular crash for pino (Okular crashes when exporting document archive)

BUG: 230477

 M  +3 -1      kuser_win.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1105664
Comment 3 bug_rep_m 2010-05-10 17:58:30 UTC
I confirm I still have the crash when installing The Okular (0.10.1) from KDE 4.4.1 with the Windows installer (on Win XP) - it renders the (great) annotation feature quite useless 
I have checked that the fix above is not in KDE 4.4.1:
http://websvn.kde.org/tags/KDE/4.4.1/kdelibs/kdecore/util/kuser_win.cpp?revision=1096481&view=markup&pathrev=1105664
Could the fix above be copied from the trunk onto tag 4.4.1? Thanks!
Comment 4 bug_rep_m 2010-05-10 18:01:33 UTC
> Could the fix above be copied from the trunk onto tag 4.4.1? Thanks!
I meant: 
Could the fix above be copied from the trunk onto a further official tag? Thanks!
Comment 5 Albert Astals Cid 2010-05-10 18:02:54 UTC
Obviously no, a fix can not be backported into a tag of an already released version, it could be released into the 4.4.x branch for future 4.4.x releases though, anyone from the windows side can comment on the issue?