as nobody else is there, fix okular crash for pino (Okular crashes when exporting document archive)

BUG: 230477

svn path=/trunk/KDE/kdelibs/; revision=1105664